Bug 122136 - [aim/icq] Adding temp contacts does not work w/o first removing them
Summary: [aim/icq] Adding temp contacts does not work w/o first removing them
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: 0.11.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Roman Jarosz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-17 01:01 UTC by Daniel Hahler
Modified: 2006-05-28 13:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Hahler 2006-02-17 01:01:44 UTC
Version:           0.11.1 (using KDE 3.5.1, Kubuntu Package 4:3.5.1-0ubuntu6 dapper)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15-15-k7

Contacts, that get "auto-added" because they send you a message and kopete has not seen them before, seem to always appear as "Offline", though you can send and receive messages to/from them.

If you remove the contact from Kopete's contact list and add it manually, the problem seems to be solved.

I've experienced this with ICQ and now Jabber protocol.

Also, this seems to affect authorization requests. They don't make it through: only after removing and manually adding a buddy that contacted me on my Jabber account I've seen him as "Online" and received his authorisation request. Also, he got an authorisation request from me only after manually adding him.

There seem to be bug reports that describe side effects of this (e.g. bug #57220).
Comment 1 Matt Rogers 2006-02-19 05:46:48 UTC
if you have not moved the contact out of the 'Not in your Contact List' group that Kopete puts them in, then they aren't on your contact list for real. They're only temporary. Hence the reason why they show offline and authorization doesn't seem to work. You have to drag them out of that group, or like you've found out already, remove the contact and add it manually.  I'm not sure this is a bug, just the way Kopete was designed.
Comment 2 Daniel Hahler 2006-02-19 13:38:34 UTC
The contacts for which this happened are not in the "Not in your Contact List" group, but in some real group really.

I've possibly moved them there using another client (Miranda) at work and not Kopete.
Comment 3 Matt Rogers 2006-02-26 16:04:46 UTC
ok, if they're ICQ contacts, you can ignore the fact that they require authorization by going into the ICQ account settings, and making sure the "Respect other contacts' with to require authorization" is unchecked.
Comment 4 Matt Rogers 2006-03-03 16:47:14 UTC
If you get a message from a contact and that contact appears in the 'Not in your contacts' group, does adding them to the contact list (i.e. right-click, then add) work correctly?

Basically, I'm trying to find out exactly how this bug can be reproduced so that someone can fix it.
Comment 5 Daniel Hahler 2006-03-03 17:46:14 UTC
Yes, it gets added to the top level after clicking "Add to contact list".

But it still stays "Offline" and I just see the ICQ number, no user details.
Comment 6 Daniel Hahler 2006-03-03 18:25:33 UTC
I've tested it with two contacts, one of them appeared normally after removing and adding him manually again.

But the other one appears now as "Not Reachable". When I click on him it says: "This user is not reachable at the moment. Please make sure you are connected and using a protocol that supports offline sending, or wait until this user comes online."

I've first tried to search him on the ICQ Whitepages, but that search did never finish and then asked another contact for the number.

He then contacted me, but Kopete has created a new account. After deleting both and manually adding him again, it worked out.

Btw: "Respect other contacts' wish to require authorization" makes no difference. They are still added as "Waiting for Authorization" and I'm not sure if I have to grant or request, but after receiving the Authorization they show up as online. (I don't have "Require authorization before someone can add you to their contact list" checked either).
Comment 7 Olivier Goffart 2006-03-10 23:03:12 UTC
Can you describe how i can reproduce that ?
I've tested it with jabber and it works fine here.
Comment 8 Daniel Hahler 2006-03-11 00:34:39 UTC
1. Get a message from someone not on your contact list
2. Click "View" in the popup (yellow tooltip) to view the message
3. The contact gets added to the contact list, but stays offline, like described above

I've only tested it with ICQ, though I also use jabber. To test it, you could try to reach me at blueyed@kdetalk.net.
Comment 9 Roman Jarosz 2006-05-28 13:13:25 UTC
SVN commit 545764 by rjarosz:

Fix bug 122136: Adding temp contacts does not work w/o first removing them.
We didn't update our local ssi list correctly so it could also fix bug 104243, please test it.

BUG: 122136
CCBUG: 104243



 M  +42 -0     liboscar/ssimanager.cpp  
 M  +8 -0      liboscar/ssimanager.h  
 M  +8 -1      liboscar/ssimodifytask.cpp  
 M  +94 -37    oscaraccount.cpp  
 M  +20 -2     oscaraccount.h  
 M  +9 -26     oscarcontact.cpp