Fix bug 122136: Adding temp contacts does not work w/o first removing them. We didn't update our local ssi list correctly so it could also fix bug 104243, please test it.

BUG: 122136
CCBUG: 104243


svn path=/branches/kopete/0.12/kopete/; revision=545764